# webprogramming_term_project

./: .gitignore  README.md  app.js  ecosystem.config.cjs  package-lock.json  package.json
api/: tmdb.js
controllers/: api.js  index.js
data/: cleaner.js  collector.js  enrichMovieData.js
db/: connection.js
model/: MovieDetail.js
pages/: detail.njk  index.njk  search_list.njk
predict_model/: lin_model.pkl  pyproject.toml
predict_model/model/: index.py  predict.py
public/css/: detail.css  index.css  search_list.css  star.css
public/js/: detail.js  index.js  search_list.js
routes/: api.js  index.js
services/: index.js  omdb.js  tmdb.js
utils/: index.js  omdb.js
